--- a/package.json
+++ b/package.json
@@ -53,5 +53,9 @@
     "typescript": "^5.7.3",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sathvikbhagavan/python-repl-runner.git"
   }
 }
